Update membuat file index.html

--- a/membuat file index.html
+++ b/membuat file index.html
@@ -20,11 +20,11 @@
 
     <ul>
 
-        <li>Ilham Azis : XIRPL2 - 19</li>
+        <li>Meilisa Nur Afifah : XIRPLC - 22</li>
 
-        <li>Adam Braham : XIRPL2 - 07</li>
+        <li>SMKN 4 MALANG</li>
 
-        <li>Fanny Eka : XIRPL2 - 11</li>
+        <li>Rekayasa Perangkat Lunak1</li>
 
     </ul>
 
